HelloUltraviolet/Fixtures/RejectedSource/FFI/HostExportMissingContext/Expected.uv
//! Expected diagnostic metadata for the HostExportMissingContext rejected-source specimen.

expectedDiagnostic("E-TYP-2632", "rule.23.HostExport-Context-Err")
